# CNStream

modules/core/include/: cnstream_frame.hpp
modules/core/src/: cnstream_frame.cpp
modules/ipc/include/: ipc_handler.hpp  module_ipc.hpp
modules/ipc/src/: client_handler.cpp  client_handler.hpp  ipc_handler.cpp  module_ipc.cpp
samples/: CMakeLists.txt
samples/demo/: client.json  run_server_client.sh  server.json
samples/ipcserver/: CMakeLists.txt  run_server.sh  server_demo.cpp
